log

Thu 14 Mar 2024 08:32:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
077d37d
Thu 14 Mar 2024 08:34:33 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
502a0f1
Thu 14 Mar 2024 08:37:47 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
da46ebf
Thu 14 Mar 2024 08:48:19 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
05b4a17
Thu 14 Mar 2024 08:48:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d5b2297
Thu 14 Mar 2024 08:59:36 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
cd8cac9
Thu 14 Mar 2024 09:00:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:21: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
   55 |       if(arr[i] % 2 == 0 & arr[i] != 0)
      |          ~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
cda783d
Thu 14 Mar 2024 09:00:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
10ad2ef
Thu 14 Mar 2024 09:01:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
54c1e62
Thu 14 Mar 2024 09:03:29 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 20/70
8007f9f
Thu 14 Mar 2024 09:04:12 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
de383de
Thu 14 Mar 2024 09:11:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
192e2a9
Thu 14 Mar 2024 09:13:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
826daf7
Thu 14 Mar 2024 09:14:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
b7a517c
Thu 14 Mar 2024 09:14:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
755a8d2
Thu 14 Mar 2024 09:17:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f2eae49
Thu 14 Mar 2024 09:17:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
e1e74b8
Thu 14 Mar 2024 09:18:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
937b637
Thu 14 Mar 2024 09:20:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:63:10: error: ‘arrPar’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   63 |   return arrPar;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f528bb2
Thu 14 Mar 2024 09:21:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
b513434
Thu 14 Mar 2024 09:24:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
affd7b8
Thu 14 Mar 2024 09:24:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8422af3
Thu 14 Mar 2024 09:25:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
2b672f8
Thu 14 Mar 2024 09:25:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
990b4c5
Thu 14 Mar 2024 09:25:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
b6c57fa
Fri 15 Mar 2024 12:24:11 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
fd91169
Fri 15 Mar 2024 12:25:22 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
f074b87
